--- a/templates/form_medicine.html
+++ b/templates/form_medicine.html
@@ -81,8 +81,12 @@
 
   
 <div class="container">
-  <h2 class="mt-5 mb-4">Patient Medicine Form</h2>
+  <h2 class="mt-5 mb-4">Patient Prescription Form</h2>
   <form action="{{ url_for('mform')}}" method="post">
+    <div class="form-group">
+      <label for="place">Patient ID:</label>
+      <input type="text" class="form-control" id="place" placeholder="Enter place" name="place" required>
+    </div>
     <div class="form-group">
       <label for="health">Medicinal Prescription:</label>
       <textarea class="form-control" id="health" rows="3" placeholder="Enter health condition" name="medicine" required></textarea>
