--- a/templates/form_testreports.html
+++ b/templates/form_testreports.html
@@ -85,7 +85,7 @@
   <form action="/upload" method="post" enctype="multipart/form-data">
     <div class="form-group">
         <label for="place">Patient ID:</label>
-        <input type="text" class="form-control" id="place" placeholder="Enter place" name="place" required>
+        <input type="text" class="form-control" id="place" placeholder="Enter ID" name="patient_id" required>
     </div>
     <div class="form-group">
         <label for="place">Test Report:</label>
