--- a/templates/home_dataeop.html
+++ b/templates/home_dataeop.html
@@ -43,7 +43,6 @@
                 cursor: pointer;
                 transition: left 0.3s ease;
             }
-            
             .footer{
               width: 100%;
               /* height: 250px; */
@@ -121,6 +120,17 @@
         background-color: #4365de;
         color: white;
       }
+      .details{
+        background-color: #4365de;
+        color: white;
+      }
+      .logout{
+        border: 1px solid black;
+      }
+      .logout:hover{
+        background-color: black;
+        color: white;
+      }
     </style>
 </head>
 <body>
@@ -149,11 +159,8 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item navbar-options">
-                      <a class="nav-link active ms-md-3" aria-current="page" href="#">Home</a>
+                      <a class="nav-link active ms-md-3" aria-current="page" href="#">About</a>
                   </li>
-                <li class="nav-item navbar-options">
-                  <a class="nav-link active" aria-current="page" href="#">About</a>
-                </li>
                 <li class="nav-item dropdown navbar-options">
                   <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Features
@@ -171,17 +178,21 @@
               </ul>
               
               <form class="form-inline my-2 my-lg-0 nav-item navbar-options">
-                
-                <a href="/mform" class="btn patient-registration me-3">Update Patient's Prescription</a>
-                <a href="/profile"><img width="40" height="40" src="https://img.icons8.com/material-outlined/48/user-male-circle.png" alt="user-male-circle"/></a>
+                <div class="dropdown">
+                  <button class="btn dropdown-toggle me-2 details" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Update Patient Details
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/tform">Upload Test Reports</a></li>
+                    <li><a class="dropdown-item" href="/mform">Upload Prescription</a></li>
+                  </ul>
+                </div>
+                <a href="/logout" class="btn logout">Logout</a>
               </form>
               </form>
             </div>
           </div>
         </nav>
-        <!-- <span class="material-symbols-outlined mt-4" id="widget" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
-          widgets
-          </span> -->
           <div class="container mt-5">
             <div class="row">
               <div class="col-12 col-md-7">
@@ -193,7 +204,6 @@
             </div>
           </div>
     </div>
-
 
     <footer class="footer mt-5 p-5" id="foot">
       <div class="container">
