--- a/templates/prescription.html
+++ b/templates/prescription.html
@@ -8,13 +8,10 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <style>
-    .btn-submit{
-      background-color: #4365de;
-      color: white;
+    .btn{
+        background-color: #4365de;
+        color: white;
     }
-    /* .form-control{
-        border: 1px ridge #4365de;
-    } */
     @media screen and (min-width:1000px){
       .btn{
               margin: 5px;
@@ -36,14 +33,6 @@
     }
     .form-control{
       border: 1px solid rgb(145, 145, 145);
-    }
-    .btn-scan{
-      border: 1px solid rgb(145, 145, 145);
-    }
-    .btn-scan:hover{
-      border: 1px solid rgb(145, 145, 145);
-      background-color: rgb(233, 233, 233);
-      color: black;
     }
   </style>
 </head>
@@ -86,47 +75,19 @@
       </div>
     </div>
   </nav>
-
   
-<div class="container">
-  <h2 class="mt-5 mb-4">Patient Information Form</h2>
-  <form action="{{ url_for('eform')}}" method="post">
-    <div>
-      <button class="btn btn-scan">Scan face <img width="50" height="50" src="https://img.icons8.com/carbon-copy/100/facial-recognition-scan.png" alt="facial-recognition-scan"/></button>
-    </div>
-    <div class="form-group">
-      <label for="health">Health Condition:</label>
-      <textarea class="form-control" id="health" rows="3" placeholder="Enter health condition" name="symptoms" required></textarea>
-    </div>
-    <div class="form-group">
-        <label for="doctor">Select Doctor:</label>
-        <select name="doctor" class="form-control" id="exampleSelect">
-            <option value="" selected hidden disabled>--Select--</option>
-            <option>Dr. Suribabu - Rheumatologist</option>
-            <option>Dr. Venkat - Cardiologist</option>
-            <option>Dr. Manikanta Swamy - Orthopedician</option>
-            <option>Dr. Indrasena Reddy - Dermatologist</option>
-            <option>Dr. Nikhilesh - Anesthiolgist</option>
-            <option>Dr. Anjani Sriya - Dentist</option>
-            <option>Dr. Charishma - Oncologist</option>
-            <option>Dr. Sowmya - Hematologist</option>
-            <option>Dr. Prajnesh - Gastroenterologist</option>
-            <option>Dr. Hima Varsha - Neurologist</option>
-        </select>
-    </div>
-    <button type="submit" class="btn btn-submit">Submit</button>
-  </form>
-</div>
 
-<!-- Bootstrap JS and dependencies -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<!-- Bootstrap JS and dependencies -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<!--Modal Functionality-->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <!--Modal Functionality-->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
