--- a/templates/home_dataeop.html
+++ b/templates/home_dataeop.html
@@ -183,7 +183,7 @@
                     Update Patient Details
                   </button>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="/tform">Upload Test Reports</a></li>
+                    <li><a class="dropdown-item" href="/testreports_form">Upload Test Reports</a></li>
                     <li><a class="dropdown-item" href="/mform">Upload Prescription</a></li>
                   </ul>
                 </div>
