new patient commit

--- a/templates/home_worker.html
+++ b/templates/home_worker.html
@@ -179,7 +179,7 @@
                     Book an Appointment
                   </button>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="/scan">New Patient</a></li>
+                    <li><a class="dropdown-item" href="/newscan">New Patient</a></li>
                     <li><a class="dropdown-item" href="/existingscan">Existing Patient</a></li>
                   </ul>
                 </div>
